<!--
  ~ Copyright (c) 2016 Elektrotehnicki fakultet
  ~  Patre 5, Banja Luka
  ~  <p/>
  ~  All Rights Reserved
  ~  <p/>
  ~   \file ${filename}
  ~   \brief
  ~   This file contains a source code for class TaskAdapter
  ~   <p/>
  ~   Created on 31.03.2016
  ~
  ~   @Author Milan Maric
  ~   <p/>
  ~   \notes
  ~   <p/>
  ~   <p/>
  ~   \history
  ~   <p/>
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="net.etfbl.prs.prs1122_12_z3.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="net.etfbl.prs.prs1122_12_z3.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="net.etfbl.prs.prs1122_12_z3.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
