<!--
  ~ Copyright (c) 2016 Elektrotehnicki fakultet
  ~  Patre 5, Banja Luka
  ~  <p/>
  ~  All Rights Reserved
  ~  <p/>
  ~   \file ${filename}
  ~   \brief
  ~   This file contains a source code for class TaskAdapter
  ~   <p/>
  ~   Created on 31.03.2016
  ~
  ~   @Author Milan Maric
  ~   <p/>
  ~   \notes
  ~   <p/>
  ~   <p/>
  ~   \history
  ~   <p/>
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
